version 0.7.0 - currently working on
- [#2038] Fix: Changed links to detail view to contain cHash
- [#1746] Fix: Removed localized team/person names from the correspondig selectors in the BE form
- [#1853] Fix: Bug with relations when edited from the team record
- [#1640] Refactoring: Added person class
- [#1641] Refactoring: Added team class
- [#1830] Feature: Changed page title to person's name in single view (SEO)
- [#1642] Feature: Added base for unit testing

version 0.6.0 - released 2008-04-17
- [#1282] Feature: Remove links to the detail view
- [#1644] Change: Removed the requirement for bidirectional extension
- [#1732] Feature: Added field for XING Profile link
- [#1741] Fix: Deleted team records with relations caused wrong output in pi1
- [#1013] Change: List view now respects the startinpoint
- [#833] Fix: Pop-Ups not working due to missing person-UID
- [#1014] Fix: Grouped teamlist was not alphabetically ordered
- [#1080] Change: Made the opinion field an RTE field
- [#828] Change: Allow for more than 15 teams to be shown in list view (flexform)
- [#994] Change: Make more fields exclude fields
- [#1638] Change: Require PHP5
- [#1639] Updated copyright lines to 2008

version 0.5.0 - released on 2007-05-08
- Feature: Manual sorting for team leaders in list view (#329)
- Feature: Open detailed view in pop-up (#141)
- Feature: Added more information to the team records (#247)
- Code cleanup (#804)
- Feature: Allow to select the source of person selection in the BOX Module (#229)
- Change: Added info regarding kj_imagelightbox2 to the manual
- Change: Changed the maxItems for teamMembers to 9999 (#499)
- Feature: Added French translation, patch by Florian Elischer (#734)
- Fix: Dependecies in the EM fixed (#739)
- Fix: Sorting in the "grouped" list view (#732)

version 0.4.0 - released on 2007-04-08
- Feature: Added a jump menu to the list view (#704)
- Change: The "order by" field is now a drop-down field (#715)