@@ -15,6 +15,22 @@ CREATE TABLE tx_bzdstaffdirectory_persons_usergroups_mm (
 
 
 #
+# Table structure for table 'tx_bzdstaffdirectory_persons_locations_mm'
+# 
+#
+CREATE TABLE tx_bzdstaffdirectory_persons_locations_mm (
+  uid_local int(11) DEFAULT '0' NOT NULL,
+  uid_foreign int(11) DEFAULT '0' NOT NULL,
+  tablenames varchar(30) DEFAULT '' NOT NULL,
+  sorting int(11) DEFAULT '0' NOT NULL,
+  sorting_foreign int(11) DEFAULT '0' NOT NULL,
+  is_dummy_record tinyint(1) DEFAULT '0' NOT NULL,
+  KEY uid_local (uid_local),
+  KEY uid_foreign (uid_foreign)
+);
+
+
+#
 # Table structure for table 'tx_bzdstaffdirectory_groups_teamleaders_mm'
 # 
 #
@@ -111,7 +127,32 @@ CREATE TABLE tx_bzdstaffdirectory_groups (
 	group_leaders int(11) DEFAULT '0' NOT NULL,
 	team_members int(11) DEFAULT '0' NOT NULL,
 	infopage int(11) DEFAULT '0' NOT NULL,
-	
+
+	PRIMARY KEY (uid),
+	KEY parent (pid)
+);
+
+
+#
+# Table structure for table 'tx_bzdstaffdirectory_locations'
+#
+CREATE TABLE tx_bzdstaffdirectory_locations (
+	uid int(11) NOT NULL auto_increment,
+	pid int(11) DEFAULT '0' NOT NULL,
+	tstamp int(11) DEFAULT '0' NOT NULL,
+	crdate int(11) DEFAULT '0' NOT NULL,
+	cruser_id int(11) DEFAULT '0' NOT NULL,
+	sorting int(10) DEFAULT '0' NOT NULL,
+	deleted tinyint(4) DEFAULT '0' NOT NULL,
+	hidden tinyint(4) DEFAULT '0' NOT NULL,
+	is_dummy_record tinyint(1) DEFAULT '0' NOT NULL,
+	sys_language_uid int(11) DEFAULT '0' NOT NULL,
+	l18n_parent int(11) DEFAULT '0' NOT NULL,
+	l18n_diffsource mediumblob NOT NULL,
+	title tinytext NOT NULL,
+	address text NOT NULL,
+	infopage int(11) DEFAULT '0' NOT NULL,
+
 	PRIMARY KEY (uid),
 	KEY parent (pid)
 );
